--- a/package.json
+++ b/package.json
@@ -38,10 +38,13 @@
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
     "react-native-svg-transformer": "^1.3.0",
-    "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "react-test-renderer": "18.2.0"
   },
   "engines": {
     "node": ">=16"
+  },
+  "volta": {
+    "node": "16.20.2",
+    "yarn": "1.22.22"
   }
 }
